fix(navbar): Corrected CSS alignment for search field. Closes #2897

--- a/frontend/src/app/mat-search-bar/mat-search-bar.component.scss
+++ b/frontend/src/app/mat-search-bar/mat-search-bar.component.scss
@@ -2,12 +2,12 @@
   align-items: center;
   display: flex;
   flex-direction: row;
-  height: 24px;
+  height: 48px;
   justify-content: flex-end;
   position: relative;
   width: 24px;
 }
-  
+
 .mat-search_field {
   padding: 0 24px 0 0;
   position: absolute;
@@ -18,19 +18,20 @@
   }
 
   ::ng-deep .mat-mdc-form-field-infix {
-    align-items: flex-end;
+    align-items: center;
     display: flex;
+    min-height: 48px;
     padding: 0.5em;
   }
 }
-  
+
 .mat-search_icons {
   display: block;
   left: 0;
   margin: 0;
   padding: 0;
   position: absolute;
-  top: 0;
+  top: 12px;
 
   &:hover {
     cursor: pointer;
